# bbaw-dse-mcp

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  TOOLS.md
src/bbaw_dse_mcp/: main.py
src/bbaw_dse_mcp/config/: base.py  existdb.py
src/bbaw_dse_mcp/schemas/base/: data.py  documents.py  responses.py  tei.py
src/bbaw_dse_mcp/schemas/correspsearch/: correspsearch.py
src/bbaw_dse_mcp/schemas/mop/: mop.py
src/bbaw_dse_mcp/schemas/schleiermacher/: documents.py  register.py  responses.py
src/bbaw_dse_mcp/servers/correspsearch/: server.py
src/bbaw_dse_mcp/servers/correspsearch/tools/: search.py
src/bbaw_dse_mcp/servers/correspsearch/utils/: api.py  search.py
src/bbaw_dse_mcp/servers/mop/: mop.py  server.py
src/bbaw_dse_mcp/servers/mop/resources/: project_info.md
src/bbaw_dse_mcp/servers/mop/tools/: __init__.py  adjutanten.py  biogramm.py  register.py  search.py  wohntopo.py
src/bbaw_dse_mcp/servers/mop/utils/: __init__.py
src/bbaw_dse_mcp/servers/schleiermacher/: server.py
src/bbaw_dse_mcp/servers/schleiermacher/resources/: citation_policy.md  documents.py  person_index_guide.md  project_info.md
src/bbaw_dse_mcp/servers/schleiermacher/tools/: chronology.py  diaries.py  docs.py  register.py  search.py
src/bbaw_dse_mcp/servers/schleiermacher/utils/: citations.py  documents.py  existdb.py  letters.py
src/bbaw_dse_mcp/tools/: base.py  existdb.py
src/bbaw_dse_mcp/utils/: existdb.py  geonames.py  gnd.py  tei.py  wikidata.py
